<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="@dimen/main_width_imageView"
            android:layout_height="@dimen/main_height_imageView"
            android:id="@+id/bmiImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.3"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            app:srcCompat="@drawable/bmi"
            tools:srcCompat="@drawable/bmi"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                android:layout_marginBottom="@dimen/main_marginBottom_guideline"
                                                app:layout_constraintTop_toTopOf="parent"
                                                android:layout_marginTop="@dimen/main_marginTop_guideline"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:layout_marginEnd="@dimen/main_marginEnd_guideline"
                                                app:layout_constraintGuide_percent="0.35"/>
    <TextView
            android:text="@string/main_tv_mass_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:id="@+id/massTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_elements"
            android:layout_marginTop="@dimen/main_margin_elements"
            android:saveEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/bmiImageView"
            android:textSize="@dimen/main_textSize_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="@dimen/main_margin_elements"/>
    <EditText
            android:layout_width="@dimen/main_width_elements"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/massET"
            android:saveEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/main_margin_elements"
            android:layout_marginEnd="@dimen/main_margin_elements"
            app:layout_constraintHorizontal_bias="0.0"
            android:maxLength="3"
            android:textSize="@dimen/main_textSize_editText"
            app:layout_constraintTop_toBottomOf="@+id/massTV"/>
    <Button
            android:text="@string/main_btn_count"
            android:layout_width="@dimen/main_width_elements"
            android:layout_height="wrap_content"
            android:id="@+id/countButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_elements"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_elements"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/main_margin_elements"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/main_textSize_countBTN"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:onClick="onCountBmiClicked"
    />
    <TextView
            android:text="@string/main_tv_height_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:id="@+id/heightTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_elements"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_elements"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="@dimen/main_textSize_textView"
            android:layout_marginTop="@dimen/main_margin_elements"
            app:layout_constraintTop_toBottomOf="@+id/massET"/>
    <EditText
            android:layout_width="@dimen/main_width_elements"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_margin_elements"
            android:layout_marginEnd="@dimen/main_margin_elements"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="@dimen/main_textSize_editText"
            android:layout_marginBottom="@dimen/main_marginBottom_heightET"
            app:layout_constraintBottom_toTopOf="@+id/resultBmiTV"
            app:layout_constraintTop_toBottomOf="@+id/heightTV"
            android:maxLength="3"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultBmiTV"
            android:textSize="@dimen/main_textSize_resultBmiTV"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/main_margin_elements"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/main_margin_elements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/categoryTV"
            android:text=""/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoryTV"
            android:textSize="@dimen/main_textSize_categoryTV"
            android:layout_marginStart="@dimen/main_margin_elements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_margin_elements"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/countButton"
            android:layout_marginBottom="@dimen/main_marginBottom_categoryTV"
            android:text=""
    />
    <ImageButton
            android:layout_width="@dimen/main_width_imageBTN"
            android:layout_height="@dimen/main_height_imageBTN"
            app:srcCompat="@drawable/ic_info_red_300_24dp"
            android:id="@+id/infoBmiBUTTON"
            tools:srcCompat="@drawable/ic_info_red_300_24dp"
            android:scaleType="fitXY"
            android:background="@drawable/round_button"
            android:tint="@null"
            app:layout_constraintStart_toEndOf="@+id/resultBmiTV"
            android:layout_marginStart="@dimen/main_margin_elements"
            android:layout_marginEnd="@dimen/main_margin_elements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/countButton"
            android:layout_marginBottom="@dimen/main_marginBottom_imageBTN"
            android:visibility="invisible"
            android:onClick="onInfoBmiClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>